log
   Compiling coffeevis v0.5.0 (/kdm/coding/coffeevis_rs)
error[E0433]: failed to resolve: use of undeclared type `Cplx`
  --> src/visualizers/classic/raw.rs:12:18
   |
12 |     let mut data = [Cplx::zero(); FFT_SIZE];
   |                     ^^^^ use of undeclared type `Cplx`
   |
help: consider importing this struct
   |
1  + use crate::math::Cplx;
   |

error[E0592]: duplicate definitions with name `new`
   --> src/math/cplx.rs:116:2
    |
116 | /     pub fn new<A, B>(x: A, y: B) -> Cplx<i32> 
117 | |     where 
118 | |         i32: TryFrom<A> + TryFrom<B>
    | |____________________________________^ duplicate definitions for `new`
...
135 |       pub fn new(x: T, y: T) -> Cplx<T> {
    |       --------------------------------- other definition for `new`

Some errors have detailed explanations: E0433, E0592.
For more information about an error, try `rustc --explain E0433`.
error: could not compile `coffeevis` (bin "coffeevis") due to 2 previous errors
